stowed the dot-files for better env management

--- a/.config/fastfetch/config.jsonc
+++ b/.config/fastfetch/config.jsonc
@@ -1,14 +1,30 @@
 {
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "logo": {
-    "source": "",
-    "color": {
-      "3": "38;2;23;147;209"
+    "type": "chafa",
+    "width": 60,
+    "printRemaining": false,
+    "source": "~/.config/wall.png",
+    // "recache": true,
+    "chafa": {
+      "symbols": "-block-border-space+vhalf",
     },
-    //"padding": {
-    //  "top": 2
-    //}
+    "padding": {
+      "top": 0,
+      "left": 2,
+      "right": 4,
+      "bottom": 0,
+    },
   },
+  //"logo": {
+  //  "source": "",
+  //  "color": {
+  //    "3": "38;2;23;147;209"
+  //  },
+  //  //"padding": {
+  //  //  "top": 2
+  //  //}
+  //},
   "display": {
     "separator": " : "
   },
@@ -57,12 +73,12 @@
       "key": " ",
       "keyColor": "blue"
     },
-    {
-      "type": "gpu",
-      "format": "{2}",
-      "key": " ",
-      "keyColor": "blue"
-    },
+    //{
+    //  "type": "gpu",
+    //  "format": "{2}",
+    //  "key": " ",
+    //  "keyColor": "blue"
+    //},
     //{
     //  "type": "gpu",
     //  "format": "{3}",
@@ -99,7 +115,7 @@
     {
       "type": "colors",
       "paddingLeft": 2,
-      "symbol": "star",
+      "symbol": "circle",
       "height": 4
     },
     "break"
