--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -21,7 +21,7 @@
     "battery",
     "pulseaudio",
     "backlight",
-    "temperature",
+    //"temperature",
     //"cpu",
     //"memory",
     //"disk",
