--- a/.config/sway/config
+++ b/.config/sway/config
@@ -29,6 +29,9 @@ set $menu --no-startup-id rofi -show drun
 # bindsym $mod+c exec --no-startup-id ~/.config/sway/swaylock.sh
 bindsym $mod+c exec hyprlock 
 
+# Emojis
+bindsym $mod+comma exec smile 
+
 # Power Menu
 bindsym $mod+p exec --no-startup-id wlogout
 
@@ -38,18 +41,17 @@ bindsym $mod+slash workspace next
 bindsym $mod+period workspace prev
 
 # Gaps 
-gaps inner 16
-gaps outer 1
+gaps inner 8
+gaps outer 2
 
 # Borders
-default_border pixel 4
-default_floating_border pixel 3
+default_border pixel 3
+default_floating_border pixel 1
 
 # Startup applications
 xwayland force
-exec --no-startup-id variety
+exec --no-startup-id waypaper --restore
 exec --no-startup-id autotiling
-exec --no-startup-id xborders
 
 # Enable touchpad
 input type:touchpad {
@@ -67,7 +69,7 @@ default_dim_inactive 0.05
 blur enable
 blur_passes 2
 blur_radius 3
-layer_effects "waybar" "blur enable"; shadows enable
+layer_effects "waybar" "blur disable"; shadows disable
 shadows on
 shadow_blur_radius 20
 
@@ -80,7 +82,7 @@ shadow_blur_radius 20
     bindsym $alt+Return exec wezterm
 
     # Launch file manager  
-    bindsym $mod+b exec $files
+    bindsym $mod+shift+f exec $files
 
     # Kill focused window
     bindsym $mod+q kill
@@ -221,8 +223,8 @@ bindsym F2 exec pactl set-sink-volume @DEFAULT_SINK@ -5%
 bindsym F3 exec pactl set-sink-volume @DEFAULT_SINK@ +5%
 
 # Brightness controls
-bindsym F4 exec brightnessctl set 10%-
-bindsym F5 exec brightnessctl set +10%
+bindsym F4 exec brightnessctl set 5%-
+bindsym F5 exec brightnessctl set +5%
 
 # Microphone mute/unmute
 bindsym F9 exec amixer set Capture toggle
