--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -21,9 +21,9 @@
     "battery",
     "pulseaudio",
     "backlight",
-    "temperature",
-    "cpu",
-    "memory",
+    //"temperature",
+    //"cpu",
+    //"memory",
     //"disk",
     "network"
   ],
