update hyprland and waybar config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -5,7 +5,8 @@ monitor=eDP-1,preferred,auto,1
 
 # Execute your favorite apps at launch
 exec-once = waybar 
-exec-once = hyprpaper 
+exec-once = waypaper --restore
+exec-once = hyrpidle
 
 # exec-once=hyprpanel & swaync & hyprpaper & hypridle
 
@@ -15,6 +16,7 @@ exec-once = hyprpaper
 $terminal = ghostty
 $fileManager = nautilus
 $menu = wofi --show drun
+$colorpicker = hyprpicker
 
 
 xwayland {
@@ -49,8 +51,9 @@ general {
   gaps_in = 5
   gaps_out = 10
 
-  border_size = 2
-  col.active_border = rgba(7dd3fcee) rgba(0369a1ee) 45deg
+  border_size = 3
+  # col.active_border = rgba(7dd3fcee) rgba(0369a1ee) 45deg
+  col.active_border = rgb(8839ef) 
   col.inactive_border = rgba(262626ee)
 
   # layout = dwindle
@@ -63,12 +66,18 @@ general {
 decoration {
   # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
+  dim_special = 0.2
   rounding = 10
+
+  active_opacity = 1
+  inactive_opacity = 0.9
   
   blur {
     enabled = true
     size = 3
-    passes = 6
+    passes = 3
+    special = true
+    vibrancy = 0.1696
   }
 
   # drop_shadow = no 
@@ -107,6 +116,11 @@ gestures {
     workspace_swipe = off
 }
 
+binds {
+workspace_back_and_forth = true
+allow_workspace_cycles = true 
+}
+
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
@@ -124,15 +138,15 @@ misc {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+# windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 # layerrule = noanim, wofi
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = super
 
 # Sound through pactl
-bind = , F3, exec, pactl set-sink-volume @DEFAULT_SINK@ +10%
-bind = , F2, exec, pactl set-sink-volume @DEFAULT_SINK@ -10%
+bind = , F3, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
+bind = , F2, exec, pactl set-sink-volume @DEFAULT_SINK@ -5%
 bind = , F1, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 
 # Brightness through brightnessctl
@@ -143,7 +157,7 @@ bind = , F4, exec, brightnessctl set 5%-
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, Q, killactive, 
 bind = $SUPER_SHIFT, E, exit, 
-bind = $SUPER_SHIFT, space, togglefloating, 
+bind = $SUPER_SHIFT, space, togglefloating
 bind = $mainMod, D, exec, $menu
 bind = $SUPER_SHIFT, R, exec, hyprctl reload
 bind = $mainMod, slash, exec, hyprctl dispatch workspace e+1
