--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,22 +1,16 @@
-# See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=eDP-1,preferred,auto,1
 
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
 exec-once = waybar 
-exec-once = waypaper --restore
 exec-once = hyrpidle
+exec-once = hyprpaper &
+exec-once = gsettings set org.gnome.desktop.interface cursor-theme "Bibata-Modern-Ice"
 
-# exec-once=hyprpanel & swaync & hyprpaper & hypridle
-
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
 # Set programs that you use
 $terminal = ghostty
 $fileManager = nautilus
 $menu = wofi --show drun
-$colorpicker = hyprpicker
 
 
 xwayland {
@@ -25,7 +19,11 @@ xwayland {
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
+env = QT_QPA_PLATFORMTHEME,qt5ct
+env = XCURSOR_THEME,"Bibata-Modern-Ice"
+env = XCURSOR_SIZE,24
+env = HYPRCURSOR_THEME,HyprBibataModernIceSVG
+env = HYPRCURSOR_SIZE,24
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
@@ -51,9 +49,8 @@ general {
   gaps_in = 5
   gaps_out = 10
 
-  border_size = 3
-  # col.active_border = rgba(7dd3fcee) rgba(0369a1ee) 45deg
-  col.active_border = rgb(8839ef) 
+  border_size = 2
+  col.active_border = rgba(7dd3fcee) rgba(0369a1ee) 45deg
   col.inactive_border = rgba(262626ee)
 
   # layout = dwindle
@@ -75,9 +72,9 @@ decoration {
   blur {
     enabled = true
     size = 3
-    passes = 3
-    special = true
-    vibrancy = 0.1696
+    passes = 6
+    # special = true
+    # vibrancy = 0.1696
   }
 
   # drop_shadow = no 
@@ -142,7 +139,6 @@ misc {
 # layerrule = noanim, wofi
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
-$mainMod = super
 
 # Sound through pactl
 bind = , F3, exec, pactl set-sink-volume @DEFAULT_SINK@ +5%
@@ -153,12 +149,16 @@ bind = , F1, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
 bind = , F5, exec, brightnessctl set +5%
 bind = , F4, exec, brightnessctl set 5%-
 
+$mainMod = super
+
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, Q, killactive, 
+bind = $mainMod, E, exec, $fileManager,
 bind = $SUPER_SHIFT, E, exit, 
 bind = $SUPER_SHIFT, space, togglefloating
 bind = $mainMod, D, exec, $menu
+bind = $mainMod, T, togglesplit,
 bind = $SUPER_SHIFT, R, exec, hyprctl reload
 bind = $mainMod, slash, exec, hyprctl dispatch workspace e+1
 bind = $mainMod, period, exec, hyprctl dispatch workspace e-1
@@ -166,7 +166,6 @@ bind = , F12, exec, hyprshot -m output -o $HOME/Pictures/Screenshots/
 bind = shift, F12, exec, hyprshot -m window -m active -o $HOME/Pictures/Screenshots/
 bind = $mainMod, C, exec, hyprlock
 bind = $mainMod, P, exec, wlogout
-bind = $mainMod, X, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, # dwindle
 bind = $mainMod, W, togglegroup, # dwindle
 
